# python-boilerplate

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py  tox.ini
akman/sample/: __init__.py  command_line.py  curses.py  hello.py  show.py
akman/sample/tests/: test_command_line.py  test_hello.py
docs/: sample.md
sample/: __main__.py  cli.py  gui.py
sample/tests/: test_cli.py  test_main.py
sample/tests/utils/: test_hello.py
sample/utils/: hello.py
