[metadata]

# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE

[bdist_wheel]

# This flag says to generate wheels that support both Python 2 and Python
# 3. If your code will not run unchanged on both Python 2 and 3, you will
# need to generate separate wheels for each Python version that you
# support. Removing this line (or setting universal to 0) will prevent
# bdist_wheel from trying to make a universal wheel. For more see:
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#wheels
universal = 1

[flake8]

# PEP 8 -- Style Guide for Python Code
# https://www.python.org/dev/peps/pep-0008/

# This flag says to ignore E302 "Expected two blank lines"
# ignore = E302

max-line-length = 120

exclude =
    .git,
    data,
    build,
    dist,
    *.egg-info,
    *.egg[s],
    __pycache__,
    .venv,
    .tox,
    .pytest_cache,
    .vscode

[pydocstyle]

# Possible conventions: pep257, numpy
# convention = pep257

match_dir = sample|tests
match = .*\.py

ignore =
    D104,
    D105,
    D107,
    D301,
    D413,
    D203,
    D212,
    D100

[tool:pytest]

# --doctest-modules
# Execute doctests directly from docstrings
# https://docs.pytest.org/en/latest/doctest.html

# --cov=PATH
# Measure coverage for filesystem path

# --cov-append
# Do not delete coverage but append to current

# https://pytest-cov.readthedocs.io/en/latest/config.html

addopts =
    ./
    --doctest-modules
    --cov=./sample/tests/
    --cov-append
